stop hiding the overflow in the header

--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ body::after {
 
 .header {
   order: 0;
-  overflow: hidden;
   margin-inline: auto;
   left: 0;
   right: 0;
